--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ colorgrad = "0.6.2"
 csv = "1.2.1"
 ndarray = { version = "0.15.6", features = ["approx-0_5"] }
 ndarray-rand = "0.14.0"
+plotpy = "0.3.5"
 plotters = "0.3.4"
 rand = "0.8.5"
 serde = { version = "1.0.163", features = ["derive"] }
