--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "request": "launch",
             "name": "Debug",
             "program": "${workspaceFolder}/target/debug/nnfs-rust",
-            "args": [],
+            "args": ["ch18"],
             "cwd": "${workspaceFolder}"
         },
         {
