--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "rust-analyzer.showUnlinkedFileNotification": false
+    "rust-analyzer.showUnlinkedFileNotification": false,
+    "lldb.launch.initCommands": [
+        "command script import ${workspaceFolder}/.vscode/name_of_ndarray_format.py"
+    ]
 }
