--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ plotpy = "0.3.5"
 plotters = "0.3.4"
 rand = "0.8.5"
 serde = { version = "1.0.163", features = ["derive"] }
+serde-pickle = "1.1.1"
