--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -49,5 +49,14 @@
                 }
             ]
         },
+        {
+            "type": "shell",
+            "label": "cargo build",
+            "command": "cargo build",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        }
     ]
 }
