--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,8 +6,9 @@
             "request": "launch",
             "name": "Debug",
             "program": "${workspaceFolder}/target/debug/nnfs-rust",
-            "args": ["ch18"],
-            "cwd": "${workspaceFolder}"
+            "args": ["ch18", "perceptron"],
+            "cwd": "${workspaceFolder}",
+            "preLaunchTask": "cargo build"
         },
         {
             "name": "Python: File",
